[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textbox2.png" type="Texture" id=1]
[ext_resource path="res://dialogues/DialoguePlayer.gd" type="Script" id=2]
[ext_resource path="res://assets/TextboxImage.png" type="Texture" id=3]
[ext_resource path="res://assets/pfp1TMP.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 216, 40 )

[node name="DialoguePlayer" type="CanvasLayer"]
script = ExtResource( 2 )
dialogue_file = "res://dialogues/jsons/npc.json"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 463.0
margin_top = 568.0
margin_right = 895.0
margin_bottom = 648.0
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 9
patch_margin_right = 8
patch_margin_bottom = 9

[node name="Message" type="RichTextLabel" parent="NinePatchRect"]
margin_left = 6.0
margin_top = 6.0
margin_right = 406.0
margin_bottom = 38.0
text = "Message"

[node name="pfpContainer" type="Sprite" parent="NinePatchRect"]
position = Vector2( 416, 5 )
scale = Vector2( 0.501337, 0.501337 )
texture = ExtResource( 3 )

[node name="pfp" type="Sprite" parent="NinePatchRect"]
position = Vector2( 417, 9.5 )
scale = Vector2( 2.5625, 3.41379 )
texture = ExtResource( 4 )

[node name="Name" type="RichTextLabel" parent="NinePatchRect"]
margin_left = 377.0
margin_top = -53.0
margin_right = 457.0
margin_bottom = -37.0
text = "Name"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 440, 589 )
z_index = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 239, 19 )
z_index = 2
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Option1" type="NinePatchRect" parent="."]
margin_left = 306.0
margin_top = 657.0
margin_right = 518.0
margin_bottom = 710.0
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 9
patch_margin_right = 8
patch_margin_bottom = 9

[node name="Text" type="RichTextLabel" parent="Option1"]
margin_left = 5.0
margin_top = 3.0
margin_right = 206.0
margin_bottom = 48.0
text = "Option 1"

[node name="Option2" type="NinePatchRect" parent="."]
margin_left = 567.0
margin_top = 657.0
margin_right = 779.0
margin_bottom = 710.0
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 9
patch_margin_right = 8
patch_margin_bottom = 9

[node name="Text" type="RichTextLabel" parent="Option2"]
margin_left = 5.0
margin_top = 4.0
margin_right = 206.0
margin_bottom = 49.0
text = "Option 2"

[node name="Option3" type="NinePatchRect" parent="."]
margin_left = 825.0
margin_top = 657.0
margin_right = 1037.0
margin_bottom = 710.0
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 9
patch_margin_right = 8
patch_margin_bottom = 9

[node name="Text" type="RichTextLabel" parent="Option3"]
margin_left = 4.0
margin_top = 3.0
margin_right = 205.0
margin_bottom = 48.0
text = "Option 3"

[connection signal="gui_input" from="NinePatchRect/Message" to="." method="_on_gui_input"]
[connection signal="gui_input" from="NinePatchRect/Name" to="." method="_on_gui_input"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="gui_input" from="Option1/Text" to="." method="_on_Option1_gui_input"]
[connection signal="gui_input" from="Option2/Text" to="." method="_on_Option2_gui_input"]
[connection signal="gui_input" from="Option3/Text" to="." method="_on_Option3_gui_input"]
